--- a/14-bookdown_cheat_sheet.Rmd
+++ b/14-bookdown_cheat_sheet.Rmd
@@ -62,6 +62,7 @@ Syntax | Notation
 `$\overline{x}$`|$\overline{x}$
 `$\hat{x}$`|$\hat{x}$
 `$\tilde{x}$`|$\tilde{x}$
+`\underset{\gamma}{\operatorname{argmin}}`|$\underset{\gamma}{\operatorname{argmin}}$
 `$\frac{a}{b}$`|$\frac{a}{b}$ 
 `$\frac{a}{b}$`|$\frac{a}{b}$
 `$\displaystyle \frac{a}{b}$`|$\displaystyle \frac{a}{b}$
