--- a/book.bib
+++ b/book.bib
@@ -16,3 +16,9 @@
   note = {ISBN 978-1541698963},
   url = {http://bayes.cs.ucla.edu/WHY/},
 }
+
+@Book{Roger_1996,
+  title = {Quantile Regression},
+  author = {Roger Koenker},
+  year = {1996},
+}
