--- a/index.Rmd
+++ b/index.Rmd
@@ -356,7 +356,7 @@ $$
 
 <br>
 
-Expected value Properties:  
+Expected Value Properties:  
 
  * E[c] = c for any constant c  
  * E[cX] = cE[X] for any constant c  
