--- a/04-imputation.Rmd
+++ b/04-imputation.Rmd
@@ -97,7 +97,7 @@ D=
 \end{equation}
 
 \begin{equation}
-X* = 
+X^* = 
 \begin{cases}
 X & \text{data are available} \\
 c & \text{data are missing}\\
@@ -123,6 +123,7 @@ When missing data are MAR and monotonic (such as in the case of panel studies), 
 
 Monotonic means that if you are missing data on X1, then that observation also has missing data on all other variables that come after it. 
 
+ML can generally handle linear models, log-linear model, but beyond that, ML still lacks both theory and software to implement.
 
 ##### Expectation-Maximization Algorithm (EM Algorithm)
 
@@ -170,9 +171,36 @@ Disadvantages:
 #### Multiple Imputation
 MI is designed to use "the Bayesian model-based approach to *create* procedures, and the frequentist (randomization-based approach) to *evaluate* procedures". [@Rubin_1996]
 
+
+MI estimates have the same properties as [ML][Maximum Likelihood] when the data is [MAR][Missing at Random (MAR)]
+
+ * Consistent
+ * Asymptotically efficient
+ * Asymptotically normal
+
+MI can be applied to any type of model, unlike [Maximum Likelihood] that is only limited to a small set of models.
+
+A drawback of MI is that it will produce slightly different estimates every time you run it. To avoid such problem, you can set seed when doing your analysis to ensure its reproducibility.
+
+##### Single Random Imputaiton 
+Random draws form the residual distribution of each imputed variable and add those random numbers to the imputed values.  
+
+For example, if we have missing data on X, and it's MCAR, then  
+
+ (1) regress X on Y ([Listwise Deletion] method) to get its residual distribution. 
+ (2) For every missing value on X, we substitute with $\tilde{x_i}=\hat{x_i} + \rho u_i$ where 
+     + $u_i$ is a random draw from a standard normal distribution
+     + $x_i$ is the predicted value from the regression of X and Y
+     + $\rho$ is the standard deviation of the residual distribution of X regressed on Y.
+
+However, the model you run with the imputed data still thinks that your data are collected, not imputed, which leads your standard error estimates to be too low and test statistics too high.  
+
+To address this problem, we need to repeat the imputation process which leads us to repeated imputation or multiple random imputation. 
+
 ##### Repeated Imputation
 "Repeated imputations are draws from the posterior predictive distribution of the missing values under a specific model , a particular Bayesian model for both the data and the missing mechanism".[@Rubin_1996]
 
+Repeated imputation, also known as, multiple random imputation, allows us to have multiple "completed" data sets. The variability across imputations will adjust the standard errors upward. 
 
 #### Mean, Mode, Median Imputation
 
