--- a/02-descriptive-stat.Rmd
+++ b/02-descriptive-stat.Rmd
@@ -13,7 +13,7 @@ Estimands include:
 
 ## Numerical Measures
 
-There is a difference between a population and a sample
+There are differences between a population and a sample
 
 Measures of | Category | Population | Sample
 ---|---|---|---
