--- a/03-regression_quantile.Rmd
+++ b/03-regression_quantile.Rmd
@@ -1,4 +1,7 @@
 ## Quantile Regression
+
+For academic review on quantile regression, check [@Yu_2003]
+
 [Linear Regression] is based on the conditional mean function $E(y|x)$  
 
 In Quantile regression, we can view each points in the conditional distribution of y. Quantile regression estimates the conditional median or any other quantile of Y.
