--- a/04-imputation.Rmd
+++ b/04-imputation.Rmd
@@ -202,6 +202,26 @@ To address this problem, we need to repeat the imputation process which leads us
 
 Repeated imputation, also known as, multiple random imputation, allows us to have multiple "completed" data sets. The variability across imputations will adjust the standard errors upward. 
 
+The estimate of the standard error of $\bar{r}$ (mean correlation estimates between X and Y) is 
+$$
+SE(\bar{r})=\sqrt{\frac{1}{M}\sum_{k}s_k^2+ (1+\frac{1}{M})(\frac{1}{M-1})\sum_{k}(r_k-\bar{r})^2}
+$$
+where M is the number of replications,
+$r_k$ is the the correlation in replication k, 
+$s_k$ is the estimated standard error in replication k. 
+
+However, this method still considers the parameter in predicting $\tilde{x}$ is still fixed, which means we assume that we are using the true parameters to predict $\tilde{x}$. To overcome this challenge, we need to introduce variability into our model for $\tilde{x}$ by treating the parameters as a random variables and use Bayesian posterior distribution of the parameters to predict the parameters. 
+
+However, if your sample is large and the proportion of missing data is small, the extra Bayesian step might not be necessary. 
+If your sample is small or the proportion of missing data is large, the extra Bayesian step is necessary. 
+
+Two algorithms to get random draws of the regression parameters from its posterior distribution: 
+
+ * Data augmentation
+ * Sampling importance/resampling (SIR)
+ 
+Authors have argued for SIR superiority due to its computer time [@King_2001]
+
 #### Mean, Mode, Median Imputation
 
  * Bad:  
