--- a/references.bib
+++ b/references.bib
@@ -268,3 +268,26 @@
 	journal = {Journal of the American Statistical Association}
 }
 
+@article{Yu_2003,
+	url = {https://www.jstor.org/stable/4128208},
+	year = 2003,
+	volume = {52},
+	pages = {331-350},
+	author = {Keming Yu and Zudi Lu and Julian Stander},
+	title = {Quantile Regression: Applications and Current Research Areas},
+	journal = {Journal of the Royal Statistical Society}
+}
+@article{King_2001,
+	doi = {10.1017/s0003055401000235},
+	url = {https://doi.org/10.1017%2Fs0003055401000235},
+	year = 2001,
+	month = {mar},
+	publisher = {Cambridge University Press ({CUP})},
+	volume = {95},
+	number = {1},
+	pages = {49--69},
+	author = {Gary King and James Honaker and Anne Joseph and Kenneth Scheve},
+	title = {Analyzing Incomplete Political Science Data: An Alternative Algorithm for Multiple Imputation},
+	journal = {American Political Science Review}
+}
+
