--- a/03-regression.Rmd
+++ b/03-regression.Rmd
@@ -1,4 +1,21 @@
 # Regression Analysis
+
+**Estimator Properties**
+
+ 1. unbiased 
+ 
+ 2. Consistency
+
+ * $plim\hat{\beta_n}=\beta$
+ * based on the law of large numbers, we can derive consistency
+ * More observations means more precise, closer to the true value.
+
+ 3. Efficiency 
+
+ * Minimum variance in comparison to another estimator.  
+    + OLS is BlUE (best linear unbiased estimator) means that OLS is the most efficient among the class of linear unbiased estimator (Gauss-Markov Theorem)
+    + If we have correct distributional assumptions, then the Maximum Likelihood is asymptotically efficient among consistent estimators.
+
 ## Linear Regression
 
 ### Ordinary Least Squares
@@ -73,6 +90,9 @@ $$
  * by the [Law of Iterated Expectations] $E(\epsilon)=0$, which can be satisfied by always including an intercept.
  * independent variables do not carry information for prediction of $\epsilon$
  * A3 implies $E(y|x)=x\beta$, which means the conditional mean function must be a linear function of x [A1 Linearity]
+
+###### A3a
+
 
 <br>
 <br>
@@ -395,3 +415,9 @@ Under multivariate normal assumption, ML yields consistent estimates of the mean
 
 
 ## Non-linear Regression
+
+
+
+
+
+
