--- a/14-bookdown_cheat_sheet.Rmd
+++ b/14-bookdown_cheat_sheet.Rmd
@@ -47,6 +47,7 @@ Syntax | Notation
 `$\cdot$`|$\cdot$
 `$\leq$`|$\leq$
 `$\geq$`|$\geq$
+`\propto`|$\propto$
 `$\subset$`|$\subset$
 `$\subseteq$`|$\subseteq$
 `$\leftarrow$`|$\leftarrow$
