--- a/references.bib
+++ b/references.bib
@@ -277,6 +277,7 @@
 	title = {Quantile Regression: Applications and Current Research Areas},
 	journal = {Journal of the Royal Statistical Society}
 }
+
 @article{King_2001,
 	doi = {10.1017/s0003055401000235},
 	url = {https://doi.org/10.1017%2Fs0003055401000235},
@@ -289,5 +290,89 @@
 	author = {Gary King and James Honaker and Anne Joseph and Kenneth Scheve},
 	title = {Analyzing Incomplete Political Science Data: An Alternative Algorithm for Multiple Imputation},
 	journal = {American Political Science Review}
+}
+
+@article{Swamy_1972,
+	doi = {10.2307/1909405},
+	url = {https://doi.org/10.2307%2F1909405},
+	year = 1972,
+	month = {mar},
+	publisher = {{JSTOR}},
+	volume = {40},
+	number = {2},
+	pages = {261},
+	author = {P. A. V. B. Swamy and S. S. Arora},
+	title = {The Exact Finite Sample Properties of the Estimators of Coefficients in the Error Components Regression Models},
+	journal = {Econometrica}
+}
+
+
+@article{Wallace_1969,
+	doi = {10.2307/1909205},
+	url = {https://doi.org/10.2307%2F1909205},
+	year = 1969,
+	month = {jan},
+	publisher = {{JSTOR}},
+	volume = {37},
+	number = {1},
+	pages = {55},
+	author = {T. D. Wallace and Ashiq Hussain},
+	title = {The Use of Error Components Models in Combining Cross Section with Time Series Data},
+	journal = {Econometrica}
+}
+
+@article{Fuller_1974,
+	doi = {10.1016/0304-4076(74)90030-x},
+	url = {https://doi.org/10.1016%2F0304-4076%2874%2990030-x},
+	year = 1974,
+	month = {may},
+	publisher = {Elsevier {BV}},
+	volume = {2},
+	number = {1},
+	pages = {67--78},
+	author = {Wayne A. Fuller and George E. Battese},
+	title = {Estimation of linear models with crossed-error structure},
+	journal = {Journal of Econometrics}
+}
+
+@article{Nerlove_1971,
+	doi = {10.2307/1913351},
+	url = {https://doi.org/10.2307%2F1913351},
+	year = 1971,
+	month = {mar},
+	publisher = {{JSTOR}},
+	volume = {39},
+	number = {2},
+	pages = {383},
+	author = {Marc Nerlove},
+	title = {A Note on Error Components Models},
+	journal = {Econometrica}
+}
+
+@article{Ahrens_1981,
+	doi = {10.1002/bimj.4710230302},
+	url = {https://doi.org/10.1002%2Fbimj.4710230302},
+	year = 1981,
+	publisher = {Wiley},
+	volume = {23},
+	number = {3},
+	pages = {227--235},
+	author = {H. Ahrens and R. Pincus},
+	title = {On Two Measures of Unbalancedness in a One-Way Model and Their Relation to Efficiency},
+	journal = {Biometrical Journal}
+}
+
+@article{Balestra_1987,
+	doi = {10.1017/s0266466600010318},
+	url = {https://doi.org/10.1017%2Fs0266466600010318},
+	year = 1987,
+	month = {apr},
+	publisher = {Cambridge University Press ({CUP})},
+	volume = {3},
+	number = {2},
+	pages = {223--246},
+	author = {Pietro Balestra and Jayalakshmi Varadharajan-Krishnakumar},
+	title = {Full Information Estimations of a System of Simultaneous Equations with Error Component Structure},
+	journal = {Econometric Theory}
 }
 
