--- a/05-ANOVA.Rmd
+++ b/05-ANOVA.Rmd
@@ -106,7 +106,7 @@ And, for the SSTR $\sum_{i}n_i(\bar{Y_{i.}}-\bar{Y_{..}})=0$
 
 Accordingly, $MSTR= \frac{SST}{a-1}$ and $MSR=\frac{SSE}{N-a}$  
 
-ANOVA table
+**ANOVA Table**
 
 Source of Variation | SS | df | MS
 ---|:-:|:-:|:-:
@@ -411,7 +411,7 @@ $$
 $$
 
 
-Equation (\#eq:unsolvable) becomes  
+Equation \@ref(eq:unsolvable) becomes 
 
 <br>
 
@@ -459,6 +459,7 @@ Equation \@ref(eq:betaorigin) with $\sum_{i}\tau_i=0$ becomes
 
 <br>
 
+$$
 \begin{equation}
 \begin{split}
 \mathbf{b}= \left[\begin{array}{c}
@@ -492,16 +493,199 @@ Y_{2.}-Y_{3.}\\
 \end{array}\right]
 \end{split}
 \end{equation}
+$$
 
 and $\hat{\tau_3}=-\hat{\tau_1}-\hat{\tau_2}=\bar{Y_3}-\frac{1}{3} \sum_{i}\bar{Y_{i.}}$  
 
-
+###### Restriction on first tau
 In R, `lm()` uses the restriction $\tau_1=0$  
 
+For the previous example, for $n_1=n_2=n_3=2$, and $\tau_1=0$. Then the treatment means can be written as:
+
+$$
+\mu_1= \mu + \tau_1 = \mu + 0 = \mu  \\
+\mu_2= \mu + \tau_2 \\
+\mu_3 = \mu + \tau_3
+$$
+Hence, $\mu$ is the mean response for the first treatment
+
+In the matrix form,
+
+$$
+\begin{equation}
+\begin{split}
+\left(\begin{array}{c} 
+Y_{11}\\
+Y_{12}\\
+Y_{21}\\
+Y_{22}\\
+Y_{31}\\
+Y_{32}\\
+\end{array}\right) &= 
+\left(\begin{array}{cccc} 
+1 & 0 & 0 \\ 
+1 & 0 & 0 \\ 
+1 & 1 & 0 \\ 
+1 & 1 & 0 \\ 
+1 & 0 & 1 \\ 
+1 & 0 & 1 \\ 
+\end{array}\right)
+\left(\begin{array}{c}
+\mu \\
+\tau_2 \\
+\tau_3 \\
+\end{array}\right) + \left(\begin{array}{c}
+\epsilon_{11} \\
+\epsilon_{12} \\
+\epsilon_{21} \\
+\epsilon_{22} \\
+\epsilon_{31} \\
+\epsilon_{32} \\
+\end{array}\right)\\
+\mathbf{y} &= \mathbf{X\beta} +\mathbf{\epsilon}
+\end{split}
+\end{equation}
+$$
+
+$\beta = [\mu,\tau_2,\tau_3]'$
+
+$$
+\begin{equation}
+\begin{split}
+\mathbf{b}= \left[\begin{array}{c}
+\hat{\mu} \\
+\hat{\tau_2} \\
+\hat{\tau_3} \\
+\end{array}\right] &= 
+(\mathbf{x}'\mathbf{x})^{-1}\mathbf{x}'\mathbf{y} \\
+& = 
+\left[\begin{array}{ccc}
+\sum_{i}n_i & n_2 & n_3\\
+n_2 & n_2 & 0\\
+n_3 & 0 & n_3 \\
+\end{array}\right]^{-1}
+\left[\begin{array}{c}
+Y_{..}\\
+Y_{2.}\\
+Y_{3.}\\
+\end{array}\right] \\
+& = 
+\left[
+\begin{array}{c}
+\bar{Y_{1.}} \\
+\bar{Y_{2.}} - \bar{Y_{1.}} \\
+\bar{Y_{3.}} - \bar{Y_{1.}}\\
+\end{array}\right]
+\end{split}
+\end{equation}
+$$
+
+$$
+E(\mathbf{b})= \beta = 
+\left[\begin{array}{c}
+{\mu}\\
+{\tau_2}\\
+{\tau_3}\\
+\end{array}\right]
+=
+\left[\begin{array}{c}
+\mu_1\\
+\mu_2-\mu_1\\
+\mu_3-\mu_1\\
+\end{array}\right]
+$$
+
+$$
+var(\mathbf{b}) = \sigma^2(\mathbf{X'X})^{-1} \\
+var(\hat{\mu}) = var(\bar{Y_{1.}})=\sigma^2/n_1 \\
+var(\hat{\tau_2}) = var(\bar{Y_{2.}}-\bar{Y_{1.}}) = \sigma^2/n_2 + \sigma^2/n_1 \\
+var(\hat{\tau_3}) = var(\bar{Y_{3.}}-\bar{Y_{1.}}) = \sigma^2/n_3 + \sigma^2/n_1
+$$
+
+<br>
+
+**Note** For all three parameterization, the ANOVA table is the same  
+
+ * [Model 1][Cell means model]: $Y_{ij} = \mu_i + \epsilon_{ij}$
+ * [Model 2][Restriction on sum of tau]: $Y_{ij} = \mu + \tau_i + \epsilon_{ij}$ where $\sum_{i} \tau_i=0$
+ * [Model 3][Restriction on first tau]: $Y_{ij}= \mu + \tau_i + \epsilon_{ij}$ where $\tau_1=0$
+ 
+All models have the same calculation for $\hat{Y}$ as 
+
+$$
+\mathbf{\hat{Y} = X(X'X)^{-1}X'Y=PY = Xb}
+$$
+
+**ANOVA Table**
+
+Source of Variation | SS | df | MS | F
+---|:-:|:-:|:-:|:-:
+Between Treatments | $\sum_{i}n_i(\bar{Y_{i.}}-\bar{Y_{..}})^2 = \mathbf{Y'(P-P_1)Y}$ | a-1 | SSTR/(a-1)| MSTR/MSE
+Error (within treatments) | $\sum_{i}\sum_{j}(Y_{ij}-\bar{Y_{i.}})^2=\mathbf{e'e}$| N-a | SSE/(N-a)|
+Total (corrected) | $\sum_{i}n_i(\bar{Y_{i.}}-\bar{Y_{..}})^2=\mathbf{Y'Y - Y'P_1Y}$ | N-1 | |
+
+where $\mathbf{P_1} = \frac{1}{n}\mathbf{J}$
 
 
+The F-statistic here has (a-1,N-a) degrees of freedom, which gives the same value for all three parameterization, but the hypothesis test is written a bit different: 
+
+$$
+H_0 : \mu_1 = \mu_2 = ... = \mu_a \\
+H_0 : \mu + \tau_1 = \mu + tau_2 = ... = \mu + \tau_a \\
+H_0 : \tau_1 = \tau_2 = ...= \tau_a 
+$$
+The F-test here serves as a preliminary analysis, to see if there is any difference at different factors. For more in-depth analysis, we consider different testing of treatment effects.
+ 
+##### Testing of Treatment Effects
+
+ * A [Single Treatment Mean] $\mu_i$
+ * A [Differences Between Treatment Means]
+ * A contrast among treatment means
+ * A linear combination of treatment means 
+
+###### Single Treatment Mean
+
+We have $\hat{\mu_i}=\bar{Y_{i.}}$ where  
+
+ * $E(\bar{Y_{i.}})=\mu_i$
+ * $var(\bar{Y_{i}})=\sigma^2/n_i$ estimated by $s^2(\bar{Y_{i.}})=MSE / n_i$
+ 
+Since $\frac{\bar{Y_{i.}}-\mu_i}{s(\bar{Y_{i.}})} \sim t_{N-a}$ and the confidence interval for $\mu_i$ is $\bar{Y_{i.}} \pm t_{1-\alpha/2;N-a}s(\bar{Y_{i.}})$,  
+then we can do a t-test for the means difference with some constant c
+
+$$
+H_0: \mu_i = c \\
+H_1: \mu_i \neq c
+$$
+
+where 
+
+$$
+T =\frac{\bar{Y_{i.}}-c}{s(\bar{Y_{i.}})}
+$$
+follows $t_{N-a}$ when $H_0$ is true.  
+If $|T| > t_{1-\alpha/2;N-a}$, we can reject $H_0$
+
+###### Differences Between Treatment Means
+
+Let $D=\mu_i - \mu_i'$, also known as **pairwise comparison**  
+$D$ can be estimated by $\hat{D}=\bar{Y_{i}}-\bar{Y_{i}}'$ is unbiased ($E(\hat{D})=\mu_i-\mu_i'$)  
+
+Since $\bar{Y_{i}}$ and $\bar{Y_{i}}'$ are independent, then 
+
+$$
+var(\hat{D})=var(\bar{Y_{i}}) + var(\bar{Y_{i'}}) = \sigma^2(1/n_i + 1/n_i')
+$$
+can be estimated with
+
+$$
+s^2(\hat{D}) = MSE(1/n_i + 1/n_i')
+$$
+
+slide 45
 
 
 #### Two Factor Fixed Effect ANOVA
 ##### Balanced
 
+##### Unbalanced
