--- a/hypothesis.Rmd
+++ b/hypothesis.Rmd
@@ -136,6 +136,49 @@ $$
 
 
 ### For a signle variance ($\sigma^2$)
+**$100(1-\alpha)%$ Confidence Interval**  
+
+$$
+L_1 = \frac{(n-1)s^2}{\chi^2_{\alpha/2}} \\
+L_1 = \frac{(n-1)s^2}{\chi^2_{1-\alpha/2}}
+$$
+**Hypothesis Testing Test Statistic**
+
+$$
+\chi^2 = \frac{(n-1)s^2}{\sigma^2_0}
+$$
+
+### For Two Variances ($\sigma^2_1,\sigma^2_2$)
+
+$$
+F_{ndf,ddf}= \frac{s^2_1}{s^2_2}
+$$
+where $s^2_1>s^2_2, ndf = n_1-1,ddf = n_2-1$
+
+
+### For Difference of Means ($\mu_1-\mu_2$), Independent Samples
+
+| | $100(1-\alpha)%$ Confidence Interval | Hypothesis Testing <br> Test Statistic | |
+|---|---|---|---|
+|When $\sigma^2$ is known | $\bar{X}_1 - \bar{X}_2 \pm z_{\alpha/2}\sqrt{\frac{\sigma^2_1}{n_1}+\frac{\sigma^2_2}{n_2}}$ | $z= \frac{(\bar{X}_1-\bar{X}_2)-(\mu_1-\mu_2)_0}{\sqrt{\frac{\sigma^2_1}{n_1}+\frac{\sigma^2_2}{n_2}}}$| |
+|When $\sigma^2$ is unknown, Variances Assumed EQUAL |  $\bar{X}_1 - \bar{X}_2 \pm t_{\alpha/2}\sqrt{s^2_p(\frac{1}{n_1}+\frac{1}{n_2})}$ | $t = \frac{(\bar{X}_1-\bar{X}_2)-(\mu_1-\mu_2)_0}{\sqrt{s^2_p(\frac{1}{n_1}+\frac{1}{n_2})}}$| Pooled Variance: $s_p^2 = \frac{(n_1 -1)s^2_1 - (n_2-1)s^2_2}{n_1 + n_2 -2}$ <br> Degrees of Freedom: $\gamma = n_1 + n_2 -2$|
+|When $\sigma^2$ is unknown, Variances Assumed UNEQUAL |  $\bar{X}_1 - \bar{X}_2 \pm t_{\alpha/2}\sqrt{(\frac{s^2_1}{n_1}+\frac{s^2_2}{n_2})}$ | $t = \frac{(\bar{X}_1-\bar{X}_2)-(\mu_1-\mu_2)_0}{\sqrt{(\frac{s^2_1}{n_1}+\frac{s^2_2}{n_2})}}$| Degrees of Freedom: $\gamma = \frac{(\frac{s_1^2}{n_1}+\frac{s^2_2}{n_2})^2}{\frac{(\frac{s_1^2}{n_1})^2}{n_1-1}+\frac{(\frac{s_2^2}{n_2})^2}{n_2-1}}$|
+
+
+### For Difference of Means ($\mu_1 - \mu_2$), Paired Samples (D = X-Y)  
+
+**$100(1-\alpha)%$ Confidence Interval**  
+$$
+\bar{D} \pm t_{\alpha/2}\frac{s_d}{\sqrt{n}}
+$$
+
+**Hypothesis Testing Test Statistic**  
+
+$$
+t = \frac{\bar{D}-D_0}{s_d / \sqrt{n}}
+$$
+
+
 
 
 
