--- a/index.Rmd
+++ b/index.Rmd
@@ -49,7 +49,7 @@ knitr::include_graphics('images/meme.jpg')
  * Another way is that you can search on Google. Different people will use different packages to achieve the same result in R. Accordingly, if you want to create a histogram, search on Google `histogram in R`, then you should be able to find multiple ways to create histogram in R.
 
 
-Information in this book are from various sources, but the skeleton is based on several courses that I have taken formally. I'd like to give professors credit accordingly.  
+Information in this book are from various sources, but the outline is based on several courses that I have taken formally. I'd like to give professors credit accordingly.  
 
 Course | Professor
 ---|---
