--- a/06-1-regression.Rmd
+++ b/06-1-regression.Rmd
@@ -23,6 +23,315 @@ The most fundamental model in statistics or econometric is a OLS linear regressi
 OLS = Maximum likelihood when the error term is assumed to be normally distributed. 
 
 
+#### Basic Model 
+
+$$
+Y_i = \beta_0 + \beta_1 X_i + \epsilon_i
+$$
+
+ * $Y_i$: response (dependent) variable at i-th observation  
+ * $\beta_0,\beta_1$: regression parameters for intercept and slope.  
+ * $X_i$: known constant (independent or predicotr variable) for i-th observation  
+ * $\epsilon_i$: random error term  
+
+$$
+E(\epsilon_i) = 0 \\
+var(\epsilon_i) = \sigma^2 \\
+cov(\epsilon_i,\epsilon_j) = 0 \text{ for all $i \neq j$}
+$$
+
+$Y_i$ is random since $\epsilon_i$ is:  
+
+$$
+\begin{align}
+E(Y_i) &= E(\beta_0 + \beta_1 X_i + \epsilon_i) \\
+&= E(\beta_0) + E(\beta_1 X_i) + E(\epsilon) \\
+&= \beta_0 + \beta_1 X_i
+\end{align}
+$$
+
+$$
+\begin{align}
+var(Y_i) &= var(\beta_0 + \beta_1 X_i + \epsilon_i) \\
+&= var(\epsilon_i) \\
+&= \sigma^2
+\end{align}
+$$
+
+Since $cov(\epsilon_i, \epsilon_j) = 0$ (uncorrelated), the outcome in any one trail has no effect on the outcome of any other. Hence, $Y_i, Y_j$ are uncorrelated as well (conditioned on the X's) 
+
+**Note**  
+[Least Squares][Ordinary Least Squares] does not require a distributional assumption  
+
+<br>
+
+##### Estimation
+
+Deviation of $Y_i$ from its expected value:  
+
+$$
+Y_i - E(Y_i) = Y_i - (\beta_0 + \beta_1 X_i)
+$$
+
+Consider the sum of the square of such deviations:  
+
+$$
+Q = \sum_{i=1}^{n} (Y_i - \beta_0 -\beta_1 X_i)^2
+$$
+
+$$
+b_1 = \frac{\sum_{i=1}^{n} (X_i - \bar{X})(Y_i - \bar{Y})}{\sum_{i=1}^{n}(X_i - \bar{X})^2} \\
+b_0 = \frac{1}{n}(\sum_{i=1}^{n}Y_i - b_1\sum_{i=1}^{n}X_i) = \bar{Y} - b_1 \bar{X}
+$$
+
+##### Properties of Least Least Estimators
+
+$$
+E(b_1) = \beta_1 \\
+E(b_0) = E(\bar{Y}) - \bar{X}\beta_1 \\
+E(\bar{Y}) = \beta_0 + \beta_1 \bar{X} \\
+E(b_0) = \beta_0 \\
+var(b_1) = \frac{\sigma^2}{\sum_{i=1}^{n}(X_i - \bar{X})^2} \\
+var(b_0) = \sigma^2 (\frac{1}{n} + \frac{\bar{X}^2}{\sum (X_i - \bar{X})^2})
+$$
+
+$var(b_1)$ approaches 0 as more measurements are taken at more $X_i$ values (unless $X_i$ is at its mean value)  
+$var(b_0)$ approaches 0 as n increases when the $X_i$ values are judiciously selected.  
+
+
+**Mean Square Error** 
+
+$$
+MSE = \frac{SSE}{n-2} = \frac{\sum_{i=1}^{n}e_i^2}{n-2} = \frac{\sum(Y_i - \hat{Y_i})^2}{n-2}
+$$
+
+Unbiased estimator of MSE:  
+
+$$
+E(MSE) = \sigma^2
+$$
+
+$$
+s^2(b_1) = \widehat{var(b_1)} = \frac{MSE}{\sum_{i=1}^{n}(X_i - \bar{X})^2} \\
+s^2(b_0) = \widehat{var(b_0)} = MSE(\frac{1}{n} + \frac{\bar{X}^2}{\sum_{i=1}^{n}(X_i - \bar{X})^2})
+$$
+
+$$
+E(s^2(b_1)) = var(b_1) \\
+E(s^2(b_0))=var(b_0)
+$$
+
+
+##### Residuals
+
+$$
+e_i = Y_i - \hat{Y} = Y_i - (b_0 + b_1 X_i)
+$$
+
+ * $e_i$ is an estimate of $\epsilon_i = Y_i - E(Y_i)$  
+ * $\epsilon_i$ is always unknown since we don't know the true $\beta_0, \beta_1$
+
+
+$$
+\sum_{i=1}^{n} e_i = 0 \\
+\sum_{i=1}^{n} X_i e_i = 0
+$$
+
+
+<br>
+
+
+##### Inference
+
+**Normality Assumption**  
+
+ * Least Squares estimation does not require assumptions of normality.  
+ * However, to do inference on the parameters, we need distributional assumptions.  
+ * Inference on $\beta_0,\beta_1$ and $Y_h$ are not extremely sensitive to moderate departures from normality, especially if the sample size is large  
+ * Inference on $Y_{pred}$ is very sensitive to the normality assumptions.  
+
+
+**Normal Error Regression Model**  
+
+$$
+Y_i \sim N(\beta_0+\beta_1X_i, \sigma^2) \\
+$$
+
+<br>
+
+
+###### $\beta_1$
+
+Under the normal error model, 
+
+$$
+b_1 \sim N(\beta_1,\frac{\sigma^2}{\sum_{i=1}^{n}(X_i - \bar{X})^2})
+$$
+
+A linear combination of independent normal random variable is normally distributed  
+
+Hence,  
+
+$$
+\frac{b_1 - \beta_1}{s(b_1)} \sim t_{n-2}
+$$
+
+A $(1-\alpha) 100 \%$ confidence interval for $\beta_1$ is  
+
+$$
+b_1 \pm t_{t-\alpha/2 ; n-2}s(b_1)
+$$
+
+<br>
+
+
+###### $\beta_0$
+
+Under the normal error model, the sampling distribution for $b_0$ is  
+
+$$
+b_0 \sim N(\beta_0,\sigma^2(\frac{1}{n} + \frac{\bar{X}^2}{\sum_{i=1}^{n}(X_i - \bar{X})^2}))
+$$
+
+Hence,  
+
+$$
+\frac{b_0 - \beta_0}{s(b_0)} \sim t_{n-2}
+$$
+A $(1-\alpha)100 \%$ confidence interval for $\beta_0$ is  
+
+$$
+b_0 \pm t_{1-\alpha/2;n-2}s(b_0)
+$$
+
+<br>
+
+
+######  Mean Response
+
+Let $X_h$ denote the level of X for which we wish to estimate the mean response  
+
+ * We denote the mean response when $X = X_h$ by $E(Y_h)$  
+ * A point estimator of $E(Y_h)$ is $\hat{Y}_h$:  
+
+$$
+\hat{Y}_h = b_0 + b_1 X_h
+$$
+**Note**  
+
+$$
+E(\bar{Y}_h)= E(b_0 + b_1X_h) \\
+= \beta_0 + \beta_1 X_h \\
+= E(Y_h)
+$$
+(unbiased estimator) 
+
+
+$$
+\begin{align}
+var(\hat{Y}_h) &= var(b_0 + b_1 X_h) \\
+&= var(\hat{Y} + b_1 (X_h - \bar{X})) \\
+&= var(\bar{Y}) + (X_h - \bar{X})^2var(b_1) + 2(X_h - \bar{X})cov(\bar{Y},b_1) \\
+&= \frac{\sigma^2}{n} + (X_h - \bar{X})^2 \frac{\sigma^2}{\sum(X_i - \bar{X})^2} \\
+&= \sigma^2(\frac{1}{n} + \frac{(X_h - \bar{X})^2}{\sum_{i=1}^{n} (X_i - \bar{X})^2})
+\end{align}
+$$
+
+Since $cov(\bar{Y},b_1) = 0$ due to the iid assumption on $\epsilon_i$  
+
+An estimate of this variance is  
+
+$$
+s^2(\hat{Y}_h) = MSE (\frac{1}{n} + \frac{(X_h - \bar{X})^2}{\sum_{i=1}^{n}(X_i - \bar{X})^2})
+$$
+
+the sampling distribution for the mean response is  
+
+$$
+\hat{Y}_h \sim N(E(Y_h),var(\hat{Y_h})) \\
+\frac{\hat{Y}_h - E(Y_h)}{s(\hat{Y}_h)} \sim t_{n-2}
+$$
+
+A $100(1-\alpha) \%$ CI for $E(Y_h)$ is 
+
+$$
+\hat{Y}_h \pm t_{1-\alpha/2;n-2}s(\hat{Y}_h)
+$$
+
+<br>
+
+
+###### Prediction of a new observation
+
+
+Regarding the [Mean Response], we are interested in estimating **mean** of the distribution of Y given a certain X.  
+
+Now, we want to **predict** an individual outcome for the distribution of Y at a given X. We call $Y_{pred}$  
+
+Estimation of mean response versus prediction of a new observation:  
+
+ * the point estimates are the same in both cases: $\hat{Y}_{pred} = \hat{Y}_h$  
+ * It is the variance of the prediction that is different; hence, prediction intervals are different than confidence intervals. The prediction variance must consider:  
+    + Variation in the mean of the distribution of Y  
+    + variation within the distribution of Y  
+
+We want to predict:  mean response + error 
+
+$$
+\beta_0 + \beta_1 X_h + \epsilon
+$$
+
+Since $E(\epsilon) = 0$, use the least squares predictor: 
+
+$$
+\hat{Y}_h = b_0 + b_1 X_h
+$$
+
+The variance of the predictor is  
+
+$$
+\begin{align}
+var(b_0 + b_1 X_h + \epsilon) &= var(b_0 + b_1 X_h) + var(\epsilon) \\
+&= \sigma^2(\frac{1}{n} + \frac{(X_h - \bar{X})^2}{\sum_{i=1}^{n}(X_i - \bar{X})^2}) + \sigma^2 \\
+&= \sigma^2(1+\frac{1}{n} + \frac{(X_h - \bar{X})^2}{\sum_{i=1}^{n}(X_i - \bar{X})^2})
+\end{align}
+$$
+
+An estimate of the variance is given by  
+
+$$
+s^2(pred)= MSE (1+ \frac{1}{n} + \frac{(X_h - \bar{X})^2}{\sum_{i=1}^{n}(X_i - \bar{X})^2}) \\
+\frac{Y_{pred}-\hat{Y}_h}{s(pred)} \sim t_{n-2}
+$$
+
+$100(1-\alpha) \%$ prediction interval is  
+
+$$
+\bar{Y}_h \pm t_{1-\alpha/2; n-2}s(pred)
+$$
+
+The prediction interval is very sensitive to the distributional assumption on the errors, $\epsilon$  
+
+
+<br>
+
+###### Confidence Band
+
+We want to know the confidence interval for the entire regression line, so we can draw conclusions about any and all mean response fo the entire regression line $E(Y) = \beta_0 + \beta_1 X$ rather than for a given response Y  
+
+**Working-Hotelling Confidence Band**  
+
+For a given $X_h$, this band is  
+
+$$
+\hat{Y}_h \pm W s(\hat{Y}_h)
+$$
+where $W^2 = 2F_{1-\alpha;2,n-2}$, which is just 2 times the F-stat with 2 and n-2 degrees of freedom  
+
+ * the interval width will change with each $X_h$ (since $s(\hat{Y}_h)$ changes)  
+ * the boundary values for this confidence band will always define a hyperbole containing the regression line  
+ * will be smallest at $X = \bar{X}$  
+
 #### OLS Assumptions
 
  * [A1 Linearity]
@@ -763,13 +1072,12 @@ Hence, the standard error estimator is the same for finite sample and large samp
 
 
 
-
-
 #### Application
 
 ```{r}
 
 ```
+
 
 
 
@@ -1263,9 +1571,8 @@ $$
 $$
 E((\mathbf{x_t - \rho x_{t-1}})')(\epsilon_t - \rho \epsilon_{t-1})=0
 $$
-
-    + [A3a] is not sufficient for the above equaiton 
-    + [A3][A3 Exogeneity of Independent Variables] is suffiicent for the above equaiton
+    + [A3a] is not sufficient for the above equation 
+    + [A3][A3 Exogeneity of Independent Variables] is sufficient for the above equation
 
  * The [FPW][Feasiable Prais Winsten] estimator is asymptotically more efficient than OLS if the errors are truly generated as AR(1) process
     + If the errors are truly generated as AR(1) process then usual standard errors are valid 
