--- a/06-1-regression.Rmd
+++ b/06-1-regression.Rmd
@@ -514,7 +514,7 @@ $$
 <br>
 
 **Joint Inference**  
-The confidence coefficient for both $\beta_0$ and $\beta_1$ considered simulatneoulsy is $\le \alpha$  
+The confidence coefficient for both $\beta_0$ and $\beta_1$ considered simultaneously is $\le \alpha$  
 
 Let  
 
